# lucle-plugins

./: .gitignore  .gitpod.yml  .pnp.cjs  Cargo.toml  package.json  turbo.json
.github/workflows/: build.yml
lucle-plugin-smtp/etc/dkim/: localhost.cert
lucle-plugin-smtp/src/: lib.rs
lucle-plugin-speedupdate/: .pnp.cjs  package.json
lucle-plugin-speedupdate/src/: Index.tsx
lucle-plugin-static-files/: Cargo.toml
lucle-plugin-static-files/src/: lib.rs
smtp/: Cargo.toml  config.toml
smtp/etc/common/: server.toml  tls.toml
smtp/etc/dkim/: localhost.key  localhost.readme
smtp/etc/smtp/: auth.toml
smtp/src/: lib.rs  smtp_server.rs
speedupdate/: .pnp.cjs  README.md  esbuild.mjs  package.json  tsconfig.json
speedupdate/proto/: speedupdate.proto
speedupdate/src/: Index.d.ts  Index.tsx  rpc.tsx
static-files/: Cargo.toml
static-files/src/: lib.rs
static-files/ui/: esbuild.mjs
static-files/web/: .pnp.cjs  package.json
