[package]
name = "smtp-server"
version = "0.1.0"
edition = "2021"

[lib]
name = "smtp_server"
crate-type = ["dylib"]

[dependencies]
smtp = { git = "https://github.com/stalwartlabs/mail-server", features = ["local_delivery"] }
utils = { git = "https://github.com/stalwartlabs/mail-server"}
directory = { git = "https://github.com/stalwartlabs/mail-server"}
jmap = { git = "https://github.com/stalwartlabs/mail-server"}
tokio = "1.34"

[profile.release]
strip = "symbols"
codegen-units = 1
lto = true
