[package]
name = "smtp-server"
version = "0.1.0"
edition = "2021"

[lib]
name = "smtp_server"
crate-type = ["dylib"]

[dependencies]
ahash = "0.8"
smtp = { git = "https://github.com/hoxxep/mail-server", branch = "explicit-versioning", features = ["local_delivery"] }
utils = { git = "https://github.com/hoxxep/mail-server", branch = "explicit-versioning"}
directory = { git = "https://github.com/hoxxep/mail-server", branch = "explicit-versioning"}
jmap = { git = "https://github.com/hoxxep/mail-server", branch = "explicit-versioning"}
tokio = "1.34"

[profile.release]
strip = "symbols"
codegen-units = 1
lto = true
